lunadon/public/alt/xp.css
/* ... */
.poll .poll__option input[type="checkbox"] {
  display: unset !important;
  margin-top: 2px !important;
}

.poll .poll__option input[type="radio"] {
  display: unset !important;
  margin-top: -3px !important;
  position: relative !important;
}

.poll .poll__option {
  padding-left: 24px !important;
}

.entry.entry-center,
.load-more:hover {
  background: unset !important;
}

.public-account-header,
.activity-stream {
  box-shadow: unset !important;
}

.logo-button svg {
  fill: #3088d4 !important;
}

.status__wrapper .poll__input[role="radio"],
.status__wrapper .poll__input.checkbox {
  display: none !important;
}

#profile_page_avatar {
  border: 1px solid #716f64 !important;
}

.public-account-bio {
  border-radius: 0px !important;
  box-shadow: unset !important;
  border-left: 1px solid #716f64 !important;
  border-top: 1px solid #716f64 !important;
  border-bottom: 1px solid #716f64 !important;
}

.public-account-bio__extra {
  color: #000000 !important;
}

.public-account-header__tabs__name * {
  text-shadow: unset !important;
  color: #000000 !important;
}

.fa-check.poll__voted__mark {
  color: green !important;
}

.poll__chart {
  border-left: 1px solid #686868 !important;
  border-right: 1px solid #686868 !important;
  height: 15px !important;
  background-repeat: repeat !important;
}

.poll ul li:nth-of-type(1) .poll__chart {
  background-image: url("/alt/progress-bar-green.png") !important;
}

.poll ul li:nth-of-type(2) .poll__chart {
  background-image: url("/alt/progress-bar-blue.png") !important;
}

.poll ul li:nth-of-type(3) .poll__chart {
  background-image: url("/alt/progress-bar-red.png") !important;
}
.poll ul li:nth-of-type(4) .poll__chart {
  background-image: url("/alt/progress-bar-yellow.png") !important;
}

.account__header__tabs__name small {
  color: #000000 !important;
}

a.status__display-name > span.display-name {
  text-decoration: none !important;
}

@media screen and (max-width: 1200px) {
  .tabs-bar__wrapper {
    padding-top: 0px !important;
  }
}

.navigation-panel {
  margin: 0px !important;
}

.compose-form__publish {
  margin-bottom: 8px !important;
}

.poll__footer select {
  padding: 6px 10px !important;
}

.windowFavicon {
  width: 16px !important;
  height: 16px !important;
  image-rendering: crisp-edges !important;
}

#headerLogo {
  width: 350px !important;
  padding: 6px !important;
  padding-bottom: 30px !important;
  padding-left: 12px !important;
  padding-right: 12px !important;
}

#headerLogoAlt {
  width: 350px !important;
}

.brand__tagline {
  margin-bottom: 20px !important;
  text-align: center !important;
}

.landing__brand {
  padding-top: 24px !important;
  padding-bottom: 24px !important;
}

.emoji-mart-bar {
  border-radius: 0px !important;
}

.emoji-picker-dropdown__menu {
  border-radius: 0px !important;
  border: 1px solid #adaa9c !important;
  box-shadow: 2px 2px 2px grey !important;
}

.icon-with-badge__badge {
  border: 1px solid #393f4f !important;
  border-radius: 4px !important;
  font-weight: bold !important;
}

.drawer__inner__mastodon {
  background: unset !important;
}

.dropdown-menu__arrow {
  display: none !important;
}

.status-card__image {
  background: unset !important;
  border-right: 1px solid #716f64 !important;
}

a.status-card {
  border-radius: 0px !important;
  border: 1px solid #716f64 !important;
}

.status-card__content {
  background-color: white;
}

a.status-card .status-card__content * {
  color: #0000ff !important;
}

.status-card:hover {
  background-color: unset !important;
}

.status-card__image-image,
.status-card__content {
  background-color: #ebebeb !important;
}

.spoiler-button .icon-button {
  width: 30px !important;
  height: 30px !important;
  margin-left: 4px !important;
  margin-top: 4px !important;
}

.status-card,.status-card__image,.status-card__image-image,
.media-gallery, .media-gallery__item {
  border-radius: 0px !important;
}

.status-card,
.media-gallery {
  margin-top: 0px !important;
  padding: 6px !important;
  background-color: #ffffff !important;
  box-shadow: 
    inset -1px 0px #ffffff, 
    inset 0px -1px #ffffff, 
    inset 1px 0px #aca899,
    inset -2px 0px #ece9d8, 
    inset 0px -2px #ece9d8, 
    inset 2px 0px #000000
    !important;
}

.status-card__image-image {
  width: 100% !important;
}

.spoiler-button__overlay__label {
  background-color: unset !important;
}

.status-card__actions button {
  height: 30px !important;
  width: 40px !important;
}

.notification:focus {
  background-color: unset !important;
}

.status__avatar {
  opacity: 1.0 !important;
}

.notification:hover {
  background-color: #e2decd !important;
}

.media-gallery {
  margin-top: -2px !important;
}

.status-card {
  margin-top: -2px !important;
}

.directory__card__img,
.directory__card__bar,
.directory__card__extra {
  background: unset !important
}

.account__header__content {
  color: #000000 !important;
}

.sidebar__toggle__logo:active,
.sidebar__toggle__logo:focus,
.sidebar__toggle__logo a:active,
.sidebar__toggle__logo a:focus {
  background: unset !important;
}

[viewBox="0 0 713.35878 175.8678"]#mastodon-svg-logo-full path:first-of-type {
  display: none !important;
}

[viewBox="0 0 713.35878 175.8678"]#mastodon-svg-logo-full path:last-of-type {
  fill: #0000ff !important;
}

/* Windows */
.columns-area__panels__main .window {
  width: 580px !important;
}

@media screen and (max-width: 600px) {
  .window,
  .windowBody {
    max-width: 90vw !important;
  }
}

/* Icons */
.status-card__image .fa-external-link {
  color: #ffffff !important;
}

.detailed-status__action-bar .fa-reply::before,
.status__action-bar .fa-reply::before,
.status__action-bar .fa-reply-all::before {
  color: #088d04 !important;
}

.detailed-status__action-bar .fa-star::before,
.status__action-bar .fa-star::before {
  color: #deae00 !important;
}

.detailed-status__action-bar .fa-ellipsis-h::before,
.status__action-bar .fa-ellipsis-h::before {
  color: #d42d1e !important;
}
/* ... */

